reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__function_names_with_keywords.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: schema
---
{
  "name": "keyword_test",
  "functions": [
    {
      "name": "with.type",
      "path": "",
      "output_kind": "complete",
      "serialization": [
        "json",
        "msgpack"
      ]
    },
    {
      "name": "with.override",
      "path": "",
      "output_kind": "complete",
      "serialization": [
        "json",
        "msgpack"
      ]
    },
    {
      "name": "with.async",
      "path": "",
      "output_kind": "complete",
      "serialization": [
        "json",
        "msgpack"
      ]
    },
    {
      "name": "with.gen",
      "path": "",
      "output_kind": "complete",
      "serialization": [
        "json",
        "msgpack"
      ]
    },
    {
      "name": "with.self",
      "path": "",
      "output_kind": "complete",
      "serialization": [
        "json",
        "msgpack"
      ]
    },
    {
      "name": "with.Self",
      "path": "",
      "output_kind": "complete",
      "serialization": [
        "json",
        "msgpack"
      ]
    },
    {
      "name": "with.crate",
      "path": "",
      "output_kind": "complete",
      "serialization": [
        "json",
        "msgpack"
      ]
    },
    {
      "name": "with.super",
      "path": "",
      "output_kind": "complete",
      "serialization": [
        "json",
        "msgpack"
      ]
    },
    {
      "name": "with.class",
      "path": "",
      "output_kind": "complete",
      "serialization": [
        "json",
        "msgpack"
      ]
    },
    {
      "name": "with.None",
      "path": "",
      "output_kind": "complete",
      "serialization": [
        "json",
        "msgpack"
      ]
    },
    {
      "name": "with.delete",
      "path": "",
      "output_kind": "complete",
      "serialization": [
        "json",
        "msgpack"
      ]
    },
    {
      "name": "type.get",
      "path": "",
      "output_kind": "complete",
      "serialization": [
        "json",
        "msgpack"
      ]
    },
    {
      "name": "self.get",
      "path": "",
      "output_kind": "complete",
      "serialization": [
        "json",
        "msgpack"
      ]
    },
    {
      "name": "crate.super.get",
      "path": "",
      "output_kind": "complete",
      "serialization": [
        "json",
        "msgpack"
      ]
    },
    {
      "name": "enum",
      "path": "",
      "output_kind": "complete",
      "serialization": [
        "json",
        "msgpack"
      ]
    },
    {
      "name": "delete",
      "path": "",
      "output_kind": "complete",
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      }
    ]
  }
}
