reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_deprecated.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::basic::StructWithDeprecatedField"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::basic::StructWithDeprecatedField"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::basic::StructWithDeprecatedField",
        "fields": {
          "named": [
            {
              "name": "_f",
              "deprecation_note": "",
              "type": {
                "name": "u8"
              },
              "required": true
            },
            {
              "name": "_g",
              "deprecation_note": "g's deprecation note",
              "type": {
                "name": "u8"
              },
              "required": true
            },
            {
              "name": "_h",
              "deprecation_note": "h's deprecation note",
              "type": {
                "name": "u8"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::basic::StructWithDeprecatedField",
        "fields": {
          "named": [
            {
              "name": "_f",
              "deprecation_note": "",
              "type": {
                "name": "u8"
              },
              "required": true
            },
            {
              "name": "_g",
              "deprecation_note": "g's deprecation note",
              "type": {
                "name": "u8"
              },
              "required": true
            },
            {
              "name": "_h",
              "deprecation_note": "h's deprecation note",
              "type": {
                "name": "u8"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
