reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_deprecated_type_and_variants-2.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "super :: into_typescript_code :: < DeprecatedStruct > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.basic.DeprecatedStruct,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<reflectapi_demo.tests.basic.DeprecatedStruct, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace basic {
      export interface DeprecatedStruct {
        _f: number /* u8 */;
      }
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (
      input: reflectapi_demo.tests.basic.DeprecatedStruct,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.basic.DeprecatedStruct,
        {},
        reflectapi_demo.tests.basic.DeprecatedStruct,
        {}
      >(client, "/inout_test", input, headers, options);
  }
}
